deployment/stacks/application/overlays/dev/template/mock-postcode-api/mock-postcode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uec-sf-sfs-mock-postcode-service
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  labels:
    app: mock-postcode-service
spec:
  type: ClusterIP
  ports:
  - name: https
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: mock-postcode-service
